--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="./styles/main.css">
+        <!-- FontAwesone CDN -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+            integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
 
@@ -17,21 +21,22 @@
 
                 <div>
                     <h1 id="user-name">MR Bappy</h1>
-                    <p id="bio">Software Developer, Sr. Developer advocate at <a href="https://pixassoft.com/" target="_blank">Pixassoft</a></p>
+                    <p id="bio">Wep App & Software Developer at <a href="https://pixassoft.com/" target="_blank">Pixassoft</a></p>
+                    <p id="email">👉 rahman4504@diu.edu.bd</p>
                     <p id="email">👉 md.moklesarrahmanbappy@gmail.com</p>
                 </div>
             </section>
 
             <section class="section-page">
                 <div id="socials-list">
-                    <a href="#" target="_blank">Facebook</a>
-                    <a href="#" target="_blank">Instagram</a>
-                    <!-- <a href="#" target="_blank">Twitter</a> -->
-                    <!-- <a href="#" target="_blank">Youtube</a> -->
-                    <a href="#" target="_blank">Github</a>
-                    <a href="#" target="_blank">Linkedin</a>
-                    <!-- <a href="#" target="_blank">Facebook</a> -->
-                    <a href="./assets/Md-Moklesar-Rahman-Bappy.pdf" target="_blank">Resume</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i> Youtube</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Github</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i> Linkedin</a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-behance"></i> Behance</a>
+                    <a href="./assets/Md-Moklesar-Rahman-Bappy.pdf" target="_blank"><i class="fa-solid fa-download"></i> Resume</a>
                 </div>
             </section>
 
@@ -145,4 +150,7 @@
 
         </div>
     </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/js/all.min.js"
+        integrity="sha512-8pHNiqTlsrRjVD4A/3va++W1sMbUHwWxxRPWNyVlql3T+Hgfd81Qc6FC5WMXDC+tSauxxzp1tgiAvSKFu1qIlA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
