--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div>
                     <h1 id="user-name">MR Bappy</h1>
                     <p id="bio">Wep App & Software Developer at <a href="https://pixassoft.com/" target="_blank">Pixassoft</a></p>
-                    <p id="email">👉 rahman4504@diu.edu.bd</p>
+                    <p id="email">👉 risingbappy1@gmail.com</p>
                     <p id="email">👉 md.moklesarrahmanbappy@gmail.com</p>
                 </div>
             </section>
